// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`shape() should fail 1`] = `
Object {
  "message": "Value should have a valid shape",
  "path": Array [],
  "requirement": Object {
    "message": "Value should be a number",
    "path": Array [
      "a",
    ],
    "type": "single",
    "value": "1",
  },
  "type": "dependence",
  "value": Object {
    "a": "1",
    "b": "text",
  },
}
`;

exports[`shape() should fail 2`] = `
Object {
  "message": "Value should have a valid shape",
  "path": Array [],
  "requirement": Object {
    "message": "Value should be a string",
    "path": Array [
      "b",
    ],
    "type": "single",
    "value": undefined,
  },
  "type": "dependence",
  "value": Object {
    "a": 1,
  },
}
`;

exports[`shape() should fail and return all errors 1`] = `
Object {
  "message": "Value should have a valid shape",
  "path": Array [],
  "requirements": Array [
    Object {
      "message": "Value should be a number",
      "path": Array [
        "a",
      ],
      "type": "single",
      "value": "1",
    },
    Object {
      "message": "Value should be a string",
      "path": Array [
        "b",
      ],
      "type": "single",
      "value": undefined,
    },
  ],
  "type": "concatenation",
  "value": Object {
    "a": "1",
  },
}
`;

exports[`shape() should fail and return only the first error 1`] = `
Object {
  "message": "Value should have a valid shape",
  "path": Array [],
  "requirement": Object {
    "message": "Value should be a number",
    "path": Array [
      "a",
    ],
    "type": "single",
    "value": "1",
  },
  "type": "dependence",
  "value": Object {
    "a": "1",
  },
}
`;

exports[`shape() should support custom message 1`] = `
Object {
  "message": "Custom message",
  "path": Array [],
  "requirement": Object {
    "message": "Value should be a string",
    "path": Array [
      "b",
    ],
    "type": "single",
    "value": undefined,
  },
  "type": "dependence",
  "value": Object {
    "a": 1,
  },
}
`;
